Add Callendly link

--- a/index.html
+++ b/index.html
@@ -123,10 +123,15 @@
 
 
         <section id="contact">
-            <h2>Contact</h2>
-            <p>Email: johndoe@example.com</p>
-            <p>GitHub: <a href="https://github.com/johndoe" target="_blank">github.com/johndoe</a></p>
-            <p>LinkedIn: <a href="https://linkedin.com/in/johndoe" target="_blank">linkedin.com/in/johndoe</a></p>
+            <h2>Let's Connect!</h2>
+            <p>Book a time with me to discuss projects, collaborations, or just to chat! Book a time with me to discuss
+                projects, collaborations, or just to chat! Book a time with me to discuss projects, collaborations, or
+                just to chat!</p>
+            <div class="calendly-container">
+                <a href="https://calendly.com/anastiour" target="_blank" class="calendly-button">
+                    Schedule a Call
+                </a>
+            </div>
         </section>
     </main>
     <footer style="position: static;">
