Use OverWorkedLark alias

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe | Backend Developer</title>
+    <title>OverWorkedLark</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1>John Doe</h1>
+        <h1>OverWorkedLark</h1>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -28,10 +28,13 @@
             <div class="about-container">
                 <div class="about-text">
                     <h2>About Me</h2>
-                    <p>I’m a passionate backend developer with expertise in scalable systems and clean code practices.
-                        My focus
-                        is
-                        on building secure, high-performance architectures that support business growth.</p>
+                    <p>Hey, I’m <strong>OWL: Over Worked Lark</strong>—a backend developer who thrives on building
+                        scalable architectures and finding elegant solutions to complex problems. I’m a night owl at
+                        heart, but like a lark, I rise early to tackle the day’s challenges. I believe in clean code,
+                        efficient workflows, and keeping a sense of humor even when I’m "over worked." If you're looking
+                        for a developer who can both code and make your day a little brighter, I'm your guy!</p>
+                    <p>Feel free to check out my work, or <a href="#contact">book some time with me</a> to chat about
+                        your next project.</p>
                 </div>
             </div>
             <div class="github-icon">
@@ -121,7 +124,6 @@
 
         </section>
 
-
         <section id="contact">
             <h2>Let's Connect!</h2>
             <p>Book a time with me to discuss projects, collaborations, or just to chat! Book a time with me to discuss
@@ -135,7 +137,7 @@
         </section>
     </main>
     <footer style="position: static;">
-        <p>&copy; 2025 John Doe. All rights reserved. | <a href="mailto:johndoe@example.com">Contact Me</a></p>
+        <p>&copy; 2025 OverWorkedLark. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
