Add blog categories

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 </a>
             </div>
         </section>
+
         <section id="projects">
             <h2>Projects</h2>
 
@@ -82,12 +83,22 @@
             </ul>
         </section>
 
-
         <section id="blog">
             <h2>Blog</h2>
 
             <div class="blog-category">
-                <h3>Backend Development</h3>
+                <h3>Algorithms to Live By</h3>
+                <section class="category-intro">
+                    <p>
+                        Every decision we make is guided by underlying processes. In this series, inspired by Algorithms
+                        to
+                        Live By by Brian Christian, we explore how algorithms shape our choices and actions. From
+                        optimizing
+                        time to navigating uncertainty, we’ll uncover the algorithms that can improve how we live, work,
+                        and
+                        solve problems—transforming complex decisions into actionable insights.
+                    </p>
+                </section>
                 <ul>
                     <li><a href="#">Scaling Microservices with Docker and Kubernetes</a> - A deep dive into scaling
                         backend services and managing containerized applications with Kubernetes.</li>
@@ -99,29 +110,69 @@
             </div>
 
             <div class="blog-category">
-                <h3>Data Engineering</h3>
+                <h3>The Life of [XYZ]</h3>
+                <section class="category-intro">
+                    <p>
+                        Everything has a beginning and an end. The journey in between is what defines life. In this
+                        series, we explore the life cycles of software and systems—from birth to death. We’ll dive into
+                        how these "creatures" are born, grow, travel, fulfill their purpose, and eventually fade. Let’s
+                        uncover the unseen paths they take and the stories they tell.
+                    </p>
+                </section>
                 <ul>
-                    <li><a href="#">Building Scalable ETL Pipelines with Apache Airflow</a> - A tutorial on using Apache
-                        Airflow to orchestrate ETL processes and handle large datasets.</li>
-                    <li><a href="#">Optimizing Big Data Storage Solutions</a> - Tips and techniques for optimizing
-                        storage when dealing with massive data volumes.</li>
-                    <li><a href="#">The Role of Data Lakes in Modern Architecture</a> - Understanding how data lakes
-                        support data processing and analytics at scale.</li>
+                    <li>
+                        <a href="/life/http">The Life of an HTTP request</a> - From the moment a user clicks a button or
+                        sends a query, what happens behind the scenes? Track the request through the various layers of
+                        the system, from the client to the server, database queries, and back to the client.
+                    </li>
+                    <li>
+                        <a href="/life/packet">The Lifeof a Network Packet</a> - Dive deep into how data travels across
+                        networks, from source to destination, covering protocols, routers, switches, and even how
+                        packets get lost or delayed.
+                    </li>
+                    <li>
+                        <a href="/life/cputask">The Life of a CPU Task</a> - Explore how a CPU schedules and executes
+                        tasks. How does it handle processes, interrupts, context switching, and multitasking?
+                    </li>
+                    <li>
+                        <a href="/life/cputask">The Life of a Database Query</a> - Look at how a query is parsed,
+                        optimized, executed, and how the database interacts with storage engines, indexes, and
+                        transaction logs.
+                    </li>
                 </ul>
             </div>
 
             <div class="blog-category">
-                <h3>Career & Growth</h3>
+                <h3>Build Your Own X</h3>
+                <section class="category-intro">
+                    <p>
+                        Heavily inspired by https://github.com/codecrafters-io/build-your-own-x
+                        No better way to know than to build from scratch
+                    </p>
+                </section>
                 <ul>
-                    <li><a href="#">How to Stay Up-to-Date with Tech Trends</a> - Strategies for continuously learning
-                        and adapting in the fast-paced tech industry.</li>
-                    <li><a href="#">Interviewing for Backend Developer Roles</a> - A guide to preparing for backend
-                        development interviews, including common questions and tips.</li>
-                    <li><a href="#">Work-Life Balance in the Tech Industry</a> - My personal take on balancing demanding
-                        work with personal time in the tech world.</li>
+                    <li>
+                        <a href="/life/http">Build Your Own Docker</a> - From the moment a user clicks a button or
+                        sends a query, what happens behind the scenes? Track the request through the various layers of
+                        the system, from the client to the server, database queries, and back to the client.
+                    </li>
+                    <li>
+                        <a href="/life/packet">Build Your Own Database</a> - Dive deep into how data travels across
+                        networks, from source to destination, covering protocols, routers, switches, and even how
+                        packets get lost or delayed.
+                    </li>
+                    <li>
+                        <a href="/life/cputask">Build Your Own Operating System</a> - Explore how a CPU schedules and
+                        executes
+                        tasks. How does it handle processes, interrupts, context switching, and multitasking?
+                    </li>
+                    <li>
+                        <a href="/life/cputask">Build Your Own Web Browser</a> - Explore how a CPU schedules and
+                        executes
+                        tasks. How does it handle processes, interrupts, context switching, and multitasking?
+                    </li>
                 </ul>
             </div>
-
         </section>
 
         <section id="contact">
